[gd_scene load_steps=5 format=3 uid="uid://yqa3bql5mth0"]

[ext_resource type="Script" uid="uid://dqboi3eg1bh7m" path="res://scripts/GameOver.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://bs4c32xbnyuw0" path="res://resources/audio/dead_sound.ogg" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_background"]
bg_color = Color(0, 0, 0, 0.85)

[sub_resource type="Theme" id="Theme_gameover"]
default_font_size = 24

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1")
main_menu_scene = "res://scenes/main_menu.tscn"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FadeOverlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Background" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="GameOverLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_gameover")
theme_override_colors/font_color = Color(0.8, 0.1, 0.1, 1)
theme_override_font_sizes/font_size = 72
text = "GAME OVER"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BtnRetry" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme = SubResource("Theme_gameover")
theme_override_font_sizes/font_size = 28
text = "RETRY"

[node name="BtnMainMenu" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme = SubResource("Theme_gameover")
theme_override_font_sizes/font_size = 28
text = "MAIN MENU"

[node name="BtnQuit" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme = SubResource("Theme_gameover")
theme_override_font_sizes/font_size = 28
text = "EXIT"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")
volume_db = -5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
